make sure none of the typescript-generator tests are problems

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,6 +38,10 @@ jobs:
         run: yarn install --frozen-lockfile --network-timeout 100000
       - name: ESlint
         run: yarn eslint -f github-annotations .
+      - name: Unit tests - all typescript-generator tests
+        timeout-minutes: 2
+        continue-on-error: true
+        run: yarn test --runInBand --forceExit "typescript-generator" --verbose --no-watchman
       - name: Unit tests - all server tests
         timeout-minutes: 2
         continue-on-error: true
