forgot can't sent evnironment variable that way in Windows

--- a/.github/workflows/debug-windows.yaml
+++ b/.github/workflows/debug-windows.yaml
@@ -12,6 +12,7 @@ jobs:
   ci-checks:
     name: Debug Windows
     runs-on: "windows-latest"
+    
     steps:
       - name: Check out repo
         uses: actions/checkout@v3
@@ -33,5 +34,7 @@ jobs:
       - name: Install Packages
         run: yarn install --frozen-lockfile --network-timeout 100000
       - name: Try running the petstore
-        run: DEBUG=counterfact:* npx . https://petstore3.swagger.io/api/v3/openapi.json out
+        run:  npx . https://petstore3.swagger.io/api/v3/openapi.json out
+        with: 
+            DEBUG: "counterfact:*"
         timeout-minutes: 2
