--- a/.github/workflows/debug-windows.yaml
+++ b/.github/workflows/debug-windows.yaml
@@ -35,5 +35,5 @@ jobs:
       - name: Install Packages
         run: yarn install --frozen-lockfile --network-timeout 100000
       - name: Try running the petstore
-        run: npx . https://petstore3.swagger.io/api/v3/openapi.json out
+        run: npx . ./openapi-example.yaml out
         timeout-minutes: 2
