--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "counterfact",
-  "version": "0.20.4",
+  "version": "0.25.4",
   "description": "a library for building a fake REST API for testing",
   "type": "module",
   "main": "./src/server/counterfact.js",
@@ -24,7 +24,7 @@
     "counterfact": "./bin/counterfact.js"
   },
   "scripts": {
-    "test": "yarn node --experimental-vm-modules $(yarn bin jest)",
+    "test": "yarn node --experimental-vm-modules ./node_modules/jest-cli/bin/jest",
     "test:mutants": "stryker run stryker.config.json",
     "release": "npx changeset publish",
     "prepare": "husky install",
@@ -33,20 +33,21 @@
     "go:petstore": "yarn counterfact https://petstore3.swagger.io/api/v3/openapi.json out",
     "go:petstore2": "yarn counterfact  https://petstore.swagger.io/v2/swagger.json out",
     "go:example": "yarn counterfact ./openapi-example.yaml out --open",
-    "counterfact": "ts-node --esm --transpileOnly ./bin/counterfact.js"
+    "counterfact": "./bin/counterfact.js"
   },
   "devDependencies": {
-    "@changesets/cli": "2.26.1",
-    "@stryker-mutator/core": "7.0.2",
-    "@stryker-mutator/jest-runner": "7.0.2",
+    "@changesets/cli": "2.26.2",
+    "@stryker-mutator/core": "7.1.1",
+    "@stryker-mutator/jest-runner": "7.1.1",
     "@testing-library/dom": "^9.3.0",
+    "@types/koa": "2.13.8",
+    "@types/koa-static": "^4.0.2",
     "@types/jest": "^29.5.2",
     "@types/js-yaml": "^4.0.5",
-    "@types/koa": "2.13.6",
+    "@types/koa-bodyparser": "^4.3.10",
     "@types/koa-proxy": "^1.0.4",
-    "@types/koa-static": "^4.0.2",
-    "eslint": "8.42.0",
-    "eslint-config-hardcore": "36.3.2",
+    "eslint": "8.48.0",
+    "eslint-config-hardcore": "41.2.0",
     "eslint-formatter-github-annotations": "0.1.0",
     "eslint-import-resolver-typescript": "^3.2.5",
     "eslint-plugin-etc": "^2.0.2",
@@ -55,23 +56,20 @@
     "eslint-plugin-jest": "^27.0.1",
     "eslint-plugin-jest-dom": "^5.0.1",
     "eslint-plugin-no-explicit-type-exports": "^0.12.1",
-    "eslint-plugin-unused-imports": "^2.0.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "husky": "8.0.3",
     "jest": "28.1.2",
     "node-mocks-http": "^1.12.2",
-    "nodemon": "2.0.22",
+    "nodemon": "3.0.1",
     "stryker-cli": "1.0.2",
-    "supertest": "6.3.3",
-    "ts-node": "^10.9.1"
+    "supertest": "6.3.3"
   },
   "dependencies": {
     "@hapi/accept": "^6.0.0",
-    "@swc/core": "^1.3.27",
-    "@swc/jest": "^0.2.24",
     "@types/json-schema": "^7.0.11",
-    "@types/koa-bodyparser": "^4.3.10",
     "chokidar": "^3.5.3",
-    "commander": "^10.0.0",
+    "commander": "^11.0.0",
+    "debug": "^4.3.4",
     "fetch": "^1.1.0",
     "fs-extra": "^11.0.0",
     "handlebars": "^4.7.7",
@@ -85,7 +83,7 @@
     "koa2-swagger-ui": "^5.6.0",
     "node-fetch": "^3.2.10",
     "open": "^9.0.0",
-    "prettier": "^2.7.1",
+    "prettier": "^3.0.0",
     "typescript": "^5.0.0"
   }
 }
