--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@changesets/cli": "2.26.2",
     "@stryker-mutator/core": "7.1.1",
     "@stryker-mutator/jest-runner": "7.1.1",
+    "@swc/core": "^1.3.82",
+    "@swc/jest": "^0.2.29",
     "@testing-library/dom": "^9.3.0",
     "@types/koa": "2.13.8",
     "@types/koa-static": "^4.0.2",
