--- a/package.json
+++ b/package.json
@@ -40,12 +40,12 @@
     "@stryker-mutator/core": "7.1.1",
     "@stryker-mutator/jest-runner": "7.1.1",
     "@testing-library/dom": "^9.3.0",
-    "@types/koa": "2.13.8",
-    "@types/koa-static": "^4.0.2",
-    "@types/jest": "^29.5.2",
+    "@types/jest": "^29.5.4",
     "@types/js-yaml": "^4.0.5",
+    "@types/koa": "^2.13.8",
     "@types/koa-bodyparser": "^4.3.10",
     "@types/koa-proxy": "^1.0.4",
+    "@types/koa-static": "^4.0.2",
     "eslint": "8.48.0",
     "eslint-config-hardcore": "41.2.0",
     "eslint-formatter-github-annotations": "0.1.0",
