set up Stryker to test TypeScript (doesn't work yet due to TS errors)

--- a/stryker.config.json
+++ b/stryker.config.json
@@ -2,12 +2,13 @@
   "$schema": "./node_modules/@stryker-mutator/core/schema/stryker-schema.json",
   "_comment": "This config was generated using 'stryker init'. Please take a look at: https://stryker-mutator.io/docs/stryker-js/configuration/ for more information",
   "packageManager": "yarn",
-  "reporters": [
-    "html",
-    "progress",
-    "dashboard"
-  ],
+  "reporters": ["html", "progress", "dashboard"],
   "testRunner": "jest",
   "testRunnerNodeArgs": ["--experimental-vm-modules"],
-  "coverageAnalysis": "perTest"
+  "coverageAnalysis": "perTest",
+  "checkers": ["typescript"],
+  "tsconfigFile": "tsconfig.json",
+  "typescriptChecker": {
+    "prioritizePerformanceOverAccuracy": true
+  }
 }
