--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@changesets/cli": "2.26.2",
     "@stryker-mutator/core": "7.1.1",
     "@stryker-mutator/jest-runner": "7.1.1",
+    "@stryker-mutator/typescript-checker": "^7.1.1",
     "@swc/core": "^1.3.82",
     "@swc/jest": "^0.2.29",
     "@testing-library/dom": "^9.3.0",
