--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
   "bin": {
     "counterfact": "./bin/counterfact.js"
   },
+  "files": [
+    "bin",
+    "dist"
+  ],
   "scripts": {
     "test": "yarn node --experimental-vm-modules ./node_modules/jest-cli/bin/jest",
     "test:mutants": "stryker run stryker.config.json",
