--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "http://json.schemastore.org/tsconfig",
   "compilerOptions": {
     "moduleResolution": "node",
     "module": "es2022",
@@ -11,5 +12,5 @@
     "outDir": "dist",
     "skipLibCheck": true
   },
-  "include": ["src", "demo-ts", "templates", "test"]
+  "include": ["src"]
 }
