--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,3 @@
-
 {
   "extends": ["config:base"],
   "rangeStrategy": "update-lockfile",
@@ -10,7 +9,8 @@
       "automerge": true,
       "stabilityDays": 3,
       "prCreation": "not-pending",
-      "ignoreDeps": ["jest", "jest-environment-jsdom"]
+      "ignoreDeps": ["jest", "jest-environment-jsdom"],
+      "rangeStrategy": "pin"
     },
     {
       "matchManagers": ["github-actions"],
