--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "fetch": "^1.1.0",
     "fs-extra": "^11.0.0",
     "handlebars": "^4.7.7",
+    "http-terminator": "^3.2.0",
     "js-yaml": "^4.1.0",
     "json-schema-faker": "^0.5.0-rcv.44",
     "json-schema-ref-parser": "^9.0.9",
