--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "dist"
   ],
   "scripts": {
-    "test": "yarn node --experimental-vm-modules ./node_modules/jest-cli/bin/jest --testPathIgnorePatterns=black-box --detectOpenHandles",
-    "test:black-box": "rimraf dist && rimraf out && yarn build && yarn node --experimental-vm-modules ./node_modules/jest-cli/bin/jest black-box --detectOpenHandles --coverage=false",
+    "test": "yarn node --experimental-vm-modules ./node_modules/jest-cli/bin/jest --testPathIgnorePatterns=black-box --forceExit",
+    "test:black-box": "rimraf dist && rimraf out && yarn build && yarn node --experimental-vm-modules ./node_modules/jest-cli/bin/jest black-box --forceExit --coverage=false",
     "test:mutants": "stryker run stryker.config.json",
     "build": "tsc && copyfiles src/client/** dist && copyfiles templates/** dist",
     "prepack": "yarn build",
@@ -37,9 +37,9 @@
     "prepare": "husky install",
     "lint": "eslint . --plugin file-progress --rule 'file-progress/activate: 1'",
     "lint:quickfix": "eslint --fix . eslint --fix demo-ts --rule=\"import/namespace: 0,etc/no-deprecated:0,import/no-cycle:0,no-explicit-type-exports/no-explicit-type-exports:0,import/no-deprecated:0,import/no-self-import:0,import/default:0,import/no-named-as-default:0\"",
-    "go:petstore": "yarn counterfact https://petstore3.swagger.io/api/v3/openapi.json out",
-    "go:petstore2": "yarn counterfact  https://petstore.swagger.io/v2/swagger.json out",
-    "go:example": "yarn counterfact ./openapi-example.yaml out --open",
+    "go:petstore": "yarn build && yarn counterfact https://petstore3.swagger.io/api/v3/openapi.json out",
+    "go:petstore2": "yarn build && yarn counterfact  https://petstore.swagger.io/v2/swagger.json out",
+    "go:example": "yarn build && yarn counterfact ./openapi-example.yaml out",
     "counterfact": "./bin/counterfact.js",
     "postinstall": "patch-package"
   },
