--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,14 +37,16 @@ jobs:
         run: yarn install --frozen-lockfile --network-timeout 100000
       - name: flaky test on Windows
         env:
-          DEGUG: "counterfact:*"
-        run: yarn test transpiler --runInBand --forceExit --verbose --no-watchman --no-coverage
+          DEBUG: "counterfact:*"
+        run: yarn test transpiler --runInBand --verbose --no-watchman --no-coverage
       - name: ESlint
         run: yarn eslint -f github-annotations .
       - name: TypeScript
         run: yarn tsc --noEmit
       - name: Unit Tests
         timeout-minutes: 2
+        env:
+          DEBUG: "counterfact:*"
         run: yarn test --runInBand --forceExit --verbose --no-watchman
       - name: Black Box Tests
         timeout-minutes: 2
