--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,10 +35,6 @@ jobs:
           key: ${{ runner.os }}-${{ steps.node-version.outputs.version }}-${{ hashFiles('**/yarn.lock') }}
       - name: Install Packages
         run: yarn install --frozen-lockfile --network-timeout 100000
-      - name: flaky test on Windows
-        env:
-          DEBUG: "counterfact:*"
-        run: yarn test transpiler --runInBand --verbose --no-watchman --no-coverage
       - name: ESlint
         run: yarn eslint -f github-annotations .
       - name: TypeScript
@@ -50,4 +46,4 @@ jobs:
         run: yarn test --runInBand --forceExit --verbose --no-watchman
       - name: Black Box Tests
         timeout-minutes: 2
-        run: yarn test:black-box --runInBand --forceExit --verbose --no-watchman
+        run: yarn test:black-box --runInBand --forceExit --verbose --no-watchman --no-coverage
