--- a/.github/workflows/renovate-changesets.yaml
+++ b/.github/workflows/renovate-changesets.yaml
@@ -15,6 +15,6 @@ jobs:
         uses: mscharley/dependency-changesets-action@v1.0.3
         with:
           token: ${{ secrets.DEPENDENCY_UPDATE_GITHUB_TOKEN }}
-          use-semantic-commits: true
+          use-semantic-commits: false
           author-name: Renovate Changesets
           author-email: github+renovate@scharley.me
