--- a/.github/workflows/renovate-changesets.yaml
+++ b/.github/workflows/renovate-changesets.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Update PR
         uses: mscharley/dependency-changesets-action@v1.0.3
         with:
-          token: ${{ secrets.DEPENDENCY_UPDATE_GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           use-semantic-commits: false
           author-name: Renovate Changesets
           author-email: github+renovate@scharley.me
