--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "noUncheckedIndexedAccess": true,
     "allowJs": true,
     "outDir": "dist",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "lib": ["es2022"]
   },
   "include": ["src"]
 }
