--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/koa-bodyparser": "4.3.12",
     "@types/koa-proxy": "1.0.7",
     "@types/koa-static": "4.0.4",
+    "@types/lodash": "^4.17.6",
     "copyfiles": "2.4.1",
     "eslint": "8.57.0",
     "eslint-config-hardcore": "41.3.0",
@@ -97,6 +98,7 @@
     "koa-bodyparser": "4.4.1",
     "koa-proxy": "1.0.0-alpha.3",
     "koa2-swagger-ui": "5.10.0",
+    "lodash": "^4.17.21",
     "node-fetch": "3.3.2",
     "open": "10.1.0",
     "patch-package": "8.0.0",
