--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "lint:quickfix": "eslint --fix . eslint --fix demo-ts --rule=\"import/namespace: 0,etc/no-deprecated:0,import/no-cycle:0,no-explicit-type-exports/no-explicit-type-exports:0,import/no-deprecated:0,import/no-self-import:0,import/default:0,import/no-named-as-default:0\"",
     "go:petstore": "yarn build && yarn counterfact https://petstore3.swagger.io/api/v3/openapi.json out",
     "go:petstore2": "yarn build && yarn counterfact  https://petstore.swagger.io/v2/swagger.json out",
-    "go:example": "yarn build && yarn counterfact ./openapi-example.yaml out",
+    "go:example": "yarn build && node ./bin/counterfact.js ./openapi-example.yaml out",
     "counterfact": "./bin/counterfact.js",
     "postinstall": "patch-package"
   },
@@ -96,7 +96,7 @@
     "jsonwebtoken": "9.0.2",
     "koa": "2.15.3",
     "koa-bodyparser": "4.4.1",
-    "koa-proxy": "1.0.0-alpha.3",
+    "koa-proxies": "^0.12.4",
     "koa2-swagger-ui": "5.10.0",
     "lodash": "4.17.21",
     "node-fetch": "3.3.2",
