--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,7 +13,7 @@ jobs:
     name: CI Checks
     strategy:
       matrix:
-        os: ["windows-latest", "ubuntu-latest"]
+        os: [windows-latest, ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Check Out Repo
