--- a/.github/workflows/debug-windows.yaml
+++ b/.github/workflows/debug-windows.yaml
@@ -9,7 +9,7 @@ env:
 jobs:
   ci-checks:
     name: Debug Windows
-    runs-on: "windows-latest"
+    runs-on: windows-latest
 
     steps:
       - name: Check out repo
