--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "node-mocks-http": "1.15.1",
     "nodemon": "3.1.4",
     "rimraf": "6.0.1",
+    "string-width": "4.2.3",
     "stryker-cli": "1.0.2",
     "supertest": "7.0.0",
     "using-temporary-files": "2.2.1"
