--- a/package.json
+++ b/package.json
@@ -74,7 +74,6 @@
     "husky": "9.1.7",
     "jest": "29.7.0",
     "node-mocks-http": "1.16.2",
-    "nodemon": "3.1.9",
     "rimraf": "6.0.1",
     "stryker-cli": "1.0.2",
     "supertest": "7.0.0",
@@ -102,6 +101,7 @@
     "lodash": "4.17.21",
     "node-fetch": "3.3.2",
     "open": "10.1.0",
+    "package.json": "^2.0.1",
     "patch-package": "8.0.0",
     "precinct": "12.1.2",
     "prettier": "3.4.2",
