--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.3.0",
   "description": "a library for building a fake REST API for testing",
   "type": "module",
-  "main": "./src/server/counterfact.js",
-  "exports": "./src/server/counterfact.js",
-  "types": "./src/counterfact.d.ts",
+  "main": "./dist/app.js",
+  "exports": "./dist/app.js",
+  "types": "./dist/server/types.d.ts",
   "author": "Patrick McElhaney <pmcelhaney@gmail.com> (https://patrickmcelhaney.com)",
   "license": "MIT",
   "repository": "github:pmcelhaney/counterfact",
@@ -107,5 +107,6 @@
     "prettier": "3.5.3",
     "recast": "0.23.11",
     "typescript": "5.8.3"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
