--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "test": "yarn node --experimental-vm-modules ./node_modules/jest-cli/bin/jest --testPathIgnorePatterns=black-box",
     "test:black-box": "rimraf dist && rimraf out && yarn build && yarn node --experimental-vm-modules ./node_modules/jest-cli/bin/jest black-box --forceExit --coverage=false",
     "test:mutants": "stryker run stryker.config.json",
+    "test:tsd": "tsd --typings ./dist/server/types.ts --files ./test/**/*.test-d.ts",
     "build": "tsc && copyfiles -f \"src/client/**\" dist/client && copyfiles -f \"src/server/types.ts\" dist/server && copyfiles -f \"src/server/*.cjs\" dist/server",
     "prepack": "yarn build",
     "release": "npx changeset publish",
@@ -78,6 +79,7 @@
     "rimraf": "6.0.1",
     "stryker-cli": "1.0.2",
     "supertest": "7.1.4",
+    "tsd": "^0.33.0",
     "using-temporary-files": "2.2.1"
   },
   "dependencies": {
