--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,7 +7,8 @@ on:
   workflow_dispatch:
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
-
+env:
+  DEBUG: counterfact:*
 jobs:
   ci-checks:
     name: CI Checks
@@ -47,7 +48,7 @@ jobs:
         run: yarn tsc --noEmit
       - name: Unit Tests
         timeout-minutes: 2
-        run: DEBUG=counterfact:* yarn test --runInBand --forceExit --verbose --no-watchman
+        run: yarn test --runInBand --forceExit --verbose --no-watchman
       - name: Black Box Tests
         timeout-minutes: 2
         run: yarn test:black-box --runInBand --forceExit --verbose --no-watchman --no-coverage
