--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,15 +27,11 @@ jobs:
         with:
           node-version: lts/*
           cache: yarn
+          cache-dependency-path: ‘**/yarn.lock’
         id: setup-node
       - name: Get Node Version
         run: echo "version=$(node -v)" >> $GITHUB_OUTPUT
         id: node-version
-      - name: Cache node_modules
-        uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-${{ steps.node-version.outputs.version }}-${{ hashFiles('**/yarn.lock') }}
       - name: Install Packages
         run: yarn install --frozen-lockfile --network-timeout 100000
       - name: Patch packages
