--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@swc/core": "1.15.8",
     "@swc/jest": "0.2.39",
     "@testing-library/dom": "10.4.1",
+    "@types/debug": "^4.1.12",
     "@types/jest": "30.0.0",
     "@types/js-yaml": "4.0.9",
     "@types/koa": "3.0.1",
@@ -91,9 +92,10 @@
     "@types/koa-proxy": "1.0.8",
     "@types/koa-static": "4.0.4",
     "@types/lodash": "4.17.23",
+    "@typescript-eslint/eslint-plugin": "^8.53.0",
+    "@typescript-eslint/parser": "^8.53.0",
     "copyfiles": "2.4.1",
     "eslint": "9.39.2",
-    "eslint-config-hardcore": "49.0.0",
     "eslint-formatter-github-annotations": "0.1.0",
     "eslint-import-resolver-typescript": "4.4.4",
     "eslint-plugin-etc": "2.0.3",
@@ -101,8 +103,12 @@
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-jest": "29.12.1",
     "eslint-plugin-jest-dom": "5.5.0",
+    "eslint-plugin-n": "^17.23.2",
     "eslint-plugin-no-explicit-type-exports": "0.12.1",
     "eslint-plugin-prettier": "5.5.4",
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-regexp": "^2.10.0",
+    "eslint-plugin-security": "^3.0.1",
     "eslint-plugin-unused-imports": "4.3.0",
     "husky": "9.1.7",
     "jest": "30.2.0",
